# TuringExecutor

./: meson.build
include/: executor.hpp  machine.hpp  parser.hpp  tape.hpp
src/: executor.cpp  main.cpp  parser.cpp  tape.cpp
